# face-authd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
crates/common/: Cargo.toml
crates/common/src/: protocol.rs
crates/face-authd/: Cargo.toml  build.rs
crates/face-authd/src/: camera.rs  dlib_face.cpp  dlib_face.h  emitter.rs  main.rs  provider.rs  raw_controls.rs  vision.rs
crates/face-authd/src/recognition/: detector.rs  embedder.rs  enrollment.rs  ffi.rs  mod.rs  models.rs
crates/pam-face-auth/: Cargo.toml
crates/pam-face-auth/src/: lib.rs
examples/: emitter.toml  pam-sudo
packaging/deb/: config  postinst  postrm  prerm  templates
packaging/rpm/: postinstall.sh  preremove.sh
scripts/: build-deb.sh  build-rpm.sh
systemd/: face-authd.service
