[workspace]
members = [
    "crates/common",
    "crates/pam-face-auth",
    "crates/face-authd",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
jpeg-decoder = "0.3"
libc = "0.2"
pam-sys = { package = "pam-sys2", version = "1.0.2" }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
v4l = "0.14"
