[package]
name = "face-authd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
bzip2 = "0.4"
common = { path = "../common" }
image.workspace = true
jpeg-decoder.workspace = true
keyutils = "0.4"
libc.workspace = true
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
v4l.workspace = true

[build-dependencies]
cc = "1"
